# madgraph-auto-model

./: .travis.yml  build.conf  builddep.sh  madgraph-auto-model.cabal  newworkspace.cabal  versioncheck.hs
modelrepo/ADMXQLD111/: couplings.py  particles.py  vertices.py
modelrepo/ADMXQLD111degen/: lorentz.py  vertices.py
modelrepo/ADMXQLD211/: vertices.py
modelrepo/ADMXQLD311/: vertices.py
modelrepo/ADMXQLD333/: coupling_orders.py  vertices.py
modelrepo/ADMXQLDlight/: couplings.py  parameters.py  vertices.py
modelrepo/ADMXUDD112/: couplings.py  parameters.py  vertices.py
modelrepo/ADMXUDD112degen/: couplings.py  vertices.py
modelrepo/Axino_UFO/: __init__.py  coupling_orders.py  couplings.py  lorentz.py  parameters.py  particles.py  vertices.py
modelrepo/heftNLO/: coupling_orders.py  couplings.py  lorentz.py  model.pkl  parameters.py  vertices.py
modelrepo/heftNLO/Fortran/: functions.f
modelrepo/leptoquark1/: coupling_orders.py  couplings.py  function_library.py  lorentz.py  parameters.py  particles.py  vertices.py  write_param_card.py
src/HEP/Automation/MadGraph/: ModelParser.hs  Process.hs
src/HEP/Automation/MadGraph/Model/: ADMXQLD.hs  ADMXQLD111.hs  ADMXQLD111degen.hs  ADMXQLD211.hs  ADMXQLD311.hs  ADMXQLDlight.hs  ADMXUDD.hs  ADMXUDD112.hs  ADMXUDD112degen.hs  AxiGluon.hs  Axino.hs  C1S.hs  C1SLowSimple.hs  C1V.hs  C1VLowSimple.hs  C8S.hs  C8V.hs  Common.hs  Exotic.hs  FU8C1V.hs  HEFTNLO.hs  HeavyHiggs.hs  LeptoQuark1.hs  MSSMSLHA.hs  Octet.hs  SChanC1V.hs  SChanC8V.hs  SChanC8Vschmaltz.hs  SM.hs  SimplifiedSUSY.hs  SimplifiedSUSYlep.hs  Singlet.hs  Six.hs  Trip.hs  Wp.hs  WpZpFull.hs  Wprime.hs  ZpH.hs  ZpHFull.hs  trash.hs
template/: param_card_ADMXQLD111.dat.st  param_card_ADMXQLD111degen.dat.st  param_card_ADMXQLD311.dat.st  param_card_ADMXUDD.dat.st  param_card_ADMXUDD112.dat.st  param_card_ADMXUDD112degen.dat.st  param_card_Axino.dat.st  param_card_C1S.dat.st  param_card_C1SLowSimple.dat.st  param_card_C1V.dat.st  param_card_C1VLowSimple.dat.st  param_card_C8S.dat.st  param_card_C8V.dat.st  param_card_FU8C1V.dat.st  param_card_HeavyHiggs.dat.st  param_card_LeptoQuark1.dat.st  param_card_LeptoQuark1.dat.st.old  param_card_Octet.dat.st  param_card_SimplifiedSUSY.dat.st  param_card_SimplifiedSUSYlep.dat.st  param_card_Singlet.dat.st  param_card_ZpHFull.dat.st  param_card_axigluon.dat.st  param_card_heftNLO.dat.st  param_card_schanC1V.dat.st  param_card_schanC8V.dat.st  param_card_schmaltz.dat.st  param_card_six.dat.st  param_card_sixfull.dat.st  param_card_sm.dat.st  param_card_trip.dat.st  param_card_tripfull.dat.st  param_card_wP.dat.st  param_card_wPfull.dat.st  param_card_zHorizontal.dat.st
