Name:		madgraph-auto-model 
Version:	0.999
Synopsis:	madgraph-auto-model
Description: 	madgraph-auto-model
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2
data-files:     template/*.dat.st 


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base > 4, 
                 mtl > 2, 
                 filepath , 
                 madgraph-auto >= 0.999, 
                 HStringTemplate > 0.6, 
                 devadmin, 
                 pureMD5 > 2,
                 bytestring > 0.9, 
                 parsec >  3.1, 
                 HEPUtil >=0.999 
  Exposed-Modules: 
                   HEP.Automation.MadGraph.Process
                   HEP.Automation.MadGraph.ModelParser
                   HEP.Automation.MadGraph.Model.Common
                   HEP.Automation.MadGraph.Model.Exotic
                   HEP.Automation.MadGraph.Model.SM
                   HEP.Automation.MadGraph.Model.Wp
                   HEP.Automation.MadGraph.Model.ZpH
                   HEP.Automation.MadGraph.Model.Six
                   HEP.Automation.MadGraph.Model.Trip
                   HEP.Automation.MadGraph.Model.AxiGluon
                   HEP.Automation.MadGraph.Model.WpZpFull
                   HEP.Automation.MadGraph.Model.ZpHFull
                   HEP.Automation.MadGraph.Model.Singlet
                   HEP.Automation.MadGraph.Model.Octet
                   HEP.Automation.MadGraph.Model.C1S
                   HEP.Automation.MadGraph.Model.C1SLowSimple
                   HEP.Automation.MadGraph.Model.C1V
                   HEP.Automation.MadGraph.Model.C1VLowSimple
                   HEP.Automation.MadGraph.Model.C8S
                   HEP.Automation.MadGraph.Model.C8V
                   HEP.Automation.MadGraph.Model.SChanC1V
                   HEP.Automation.MadGraph.Model.SChanC8V
                   HEP.Automation.MadGraph.Model.SChanC8Vschmaltz
                   HEP.Automation.MadGraph.Model.FU8C1V
                   HEP.Automation.MadGraph.Model.ADMXUDD
                   HEP.Automation.MadGraph.Model.ADMXQLD111
                   HEP.Automation.MadGraph.Model.ADMXQLD311
                   HEP.Automation.MadGraph.Model.ADMXQLD211
  -- Other-Modules: 
                   Paths_madgraph_auto_model
                   
