Name:		madgraph-auto-model 
Version:	0.999
Synopsis:	madgraph-auto-model
Description: 	madgraph-auto-model
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.2
data-files:     template/*.dat.st 
                modelrepo/ADMXQLD111/*.py
                modelrepo/ADMXQLD111/*.dat
                modelrepo/ADMXQLD111degen/*.py
                modelrepo/ADMXQLD111degen/*.dat
                modelrepo/ADMXQLD211/*.py
                modelrepo/ADMXQLD211/*.dat
                modelrepo/ADMXQLD311/*.py
                modelrepo/ADMXQLD311/*.dat
                modelrepo/ADMXQLDlight/*.py
                modelrepo/ADMXQLDlight/*.dat
                modelrepo/SimplifiedSUSY/*.py
                modelrepo/SimplifiedSUSY/*.dat
                modelrepo/SimplifiedSUSYlep/*.py
                modelrepo/SimplifiedSUSYlep/*.dat
                modelrepo/leptoquark1/*.py
                modelrepo/leptoquark1/*.dat 
                modelrepo/ADMXUDD112/*.py
                modelrepo/ADMXUDD112/*.dat
                modelrepo/ADMXUDD112degen/*.py
                modelrepo/ADMXUDD112degen/*.dat
 

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base > 4, 
                 mtl > 2, 
                 filepath , 
                 madgraph-auto >= 0.999, 
                 HStringTemplate > 0.6, 
                 devadmin, 
                 pureMD5 > 2,
                 bytestring > 0.9, 
                 parsec >  3.1, 
                 HEPUtil >=0.999 
  Exposed-Modules: 
                   HEP.Automation.MadGraph.ModelParser
                   HEP.Automation.MadGraph.Model.Common
                   HEP.Automation.MadGraph.Model.SM
                   HEP.Automation.MadGraph.Model.SimplifiedSUSY
                   HEP.Automation.MadGraph.Model.SimplifiedSUSYlep
                   HEP.Automation.MadGraph.Model.ADMXQLD111
                   HEP.Automation.MadGraph.Model.ADMXQLD111degen
                   HEP.Automation.MadGraph.Model.ADMXQLD311
                   HEP.Automation.MadGraph.Model.ADMXQLD211
                   HEP.Automation.MadGraph.Model.ADMXQLDlight
                   HEP.Automation.MadGraph.Model.ADMXUDD112
                   HEP.Automation.MadGraph.Model.ADMXUDD112degen
                   HEP.Automation.MadGraph.Model.LeptoQuark1                   
                   Paths_madgraph_auto_model
                   
